# OpenChaos

./: .gitignore  CLAUDE.md  CONFIG_REFERENCE.md  CONTRIBUTORS.md  FEATURE_FLAGS.md  GAMEPLAY_CHANGES.md  LICENSE  Makefile  README.md  TECHNICAL_CHANGES.md  THIRD_PARTY_LICENSES.md
libDualsense/: API.md  CMakeLists.txt  EXAMPLES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  ds_calibration.cpp  ds_calibration.h  ds_crc.cpp  ds_crc.h  ds_device.cpp  ds_device.h  ds_feature.cpp  ds_feature.h  ds_input.cpp  ds_input.h  ds_output.cpp  ds_output.h  ds_test.cpp  ds_test.h  ds_trigger.cpp  ds_trigger.h
new_game/: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  SETUP.md  vcpkg.json
new_game/MFLib1/Headers/: Display.h  Draw2d.h  DrawPoly.h  Keyboard.h  MFErrors.h  MFFile.h  MFHeader.h  MFHost.h  MFLbType.h  MFMaths.h  MFMem.h  MFStd.h  MFTypes.h  MFUtils.h  Mouse.h  Palette.h  Sprites.h
new_game/MFStdLib/Headers/: MFStdLib.h  StdFile.h  StdKeybd.h  StdMaths.h  StdMem.h  StdMouse.h
new_game/MuckyBasic/: Always.h  Key.h  Matrix.cpp  Matrix.h  Tga.cpp  Tga.h  cg.cpp  cg.h  clip.cpp  clip.h  comp.cpp  comp.h  console.cpp  console.h  d3denum.cpp  d3denum.h  d3dframe.h  font.cpp  font.h  lex.cpp  lex.h  link.cpp  link.h  ll.cpp  ll.h  main.cpp  mem.cpp  mem.h  ml.h  os.cpp  os.h  parse.cpp  parse.h  resource.h  st.cpp  st.h  sysvar.cpp  sysvar.h  vm.cpp  vm.h
new_game/cmake/: clang-arm64-macos.cmake  clang-x64-linux.cmake  clang-x64-windows.cmake  clang-x86-windows.cmake
new_game/fallen/: Fallen.sln  Fallen.vcxproj  vcpkg.json
new_game/fallen/AutoRun/: AutoRun.cpp  AutoRun.h  Director.cpp  Director.h  StdAfx.h  resource.h
new_game/fallen/Headers/: Attract.h  CamTargetSetup.h  Camera.h  CameraSetup.h  Command.h  Controls.h  Cop.h  Darci.h  Editor.h  EnemySetup.h  Engine.h  Enter.h  Env.h  FMatrix.h  Furn.h  GEdit.h  Game.h  Hierarchy.h  Level.h  Map.h  MapView.h  Mission.h  Nav.h  Night.h  PSystem.h  Person.h  Pjectile.h  Player.h  Roper.h  Sound.h  Special.h  State.h  Structs.h  Switch.h  TabCtl.h  Thing.h  Thug.h  TriggerSetup.h  Vehicle.h  WSpace.h  (+106 more)
new_game/fallen/SoundConverter/: soundconv.cpp
new_game/fallen/Source/: Anim.cpp  Attract.cpp  BonusSetup.cpp  Building.cpp  CamTargetSetup.cpp  Camera.cpp  CameraSetup.cpp  Combat.cpp  Command.cpp  Controls.cpp  Cop.cpp  Darci.cpp  EdStrings.cpp  Effect.cpp  Enemy.cpp  EnemySetup.cpp  EngWind.cpp  Enter.cpp  Env.cpp  FMatrix.cpp  Furn.cpp  GEdit.cpp  Game.cpp  Hierarchy.cpp  Level.cpp  Levelpsx.cpp  Main.cpp  Map.cpp  MapExitSetup.cpp  MapView.cpp  Mission.cpp  Nav.cpp  NavSetup.cpp  Person.cpp  Pjectile.cpp  Player.cpp  PlayerSetup.cpp  Prim.cpp  ResetSetup.cpp  Roper.cpp  (+126 more)
new_game/fallen/UnInst/: UnInst.c
new_game/fallen/dxinstall/: dinstall.c  resource.h  wincode.c
new_game/fallen/outro/: Always.h  Key.h  Tga.h  back.h  cam.cpp  cam.h  checker.cpp  checker.h  credits.cpp  credits.h  font.h  imp.cpp  imp.h  lmap.cpp  mf.cpp  mf.h  midasdll.h  os.cpp  os.h  outroFont.cpp  outroMain.cpp  outroMatrix.cpp  outroTga.cpp  slap.cpp  slap.h  wire.cpp  wire.h
new_game/libs/dualsense-multiplatform/: .gitignore  README.md  VENDORED.md
new_game/resources/icon/: OpenChaos.rc
new_game/scripts/: build.ps1  configure.ps1  copy_resources.ps1
new_game/src/: config.h  debug_config.h  debug_interpolation_config.h  feature_flags.cpp  feature_flags.h  main.cpp  version.h
new_game/src/ai/: combat.cpp  combat.h  combat_globals.cpp  combat_globals.h  mav.cpp  mav.h  mav_action.h  mav_globals.cpp  mav_globals.h  pcom.cpp  pcom.h  pcom_globals.cpp  pcom_globals.h
new_game/src/assets/: anim.cpp  anim.h  anim_globals.cpp  anim_globals.h  anim_loader.cpp  anim_loader.h  anim_loader_globals.h  anim_tmap.cpp  anim_tmap.h  bink_client.cpp  bink_client.h  compression.cpp  compression.h  compression_globals.cpp  file_clump.h  image_compression.cpp  image_compression.h  image_compression_globals.cpp  image_compression_globals.h  level_loader.cpp  level_loader.h  level_loader_globals.h  mapthing.h  sound_id.h  sound_id_globals.cpp  startscr.cpp  startscr.h  startscr_globals.cpp  texture.cpp  texture.h  texture_globals.cpp  texture_globals.h  tga.cpp  tga.h  tga_globals.cpp  tga_globals.h  xlat_str.cpp  xlat_str.h  xlat_str_globals.cpp
new_game/src/buildings/: build.cpp  build.h  build2.cpp  build2.h  build_globals.cpp  build_globals.h  building.cpp  building.h  building_globals.cpp  building_globals.h  building_types.h  id.h  outline.cpp  outline.h  prim.cpp  prim.h  prim_globals.cpp  prim_globals.h  prim_types.h  stair.cpp  stair.h  stair_globals.cpp  stair_globals.h  ware.cpp  ware.h  ware_globals.cpp  ware_globals.h
new_game/src/camera/: cam.h  cam_globals.h  cam_trig.h  camera_mode.cpp  camera_mode.h  fc.cpp  fc.h  fc_globals.cpp  fc_globals.h  look_sensitivity.cpp  look_sensitivity.h  vis_cam.cpp  vis_cam.h
new_game/src/combat/: combat.cpp  combat.h  combat_cooldown.cpp  combat_cooldown.h  combat_globals.cpp  combat_globals.h  combat_test_mode.cpp  combat_test_mode.h  combo_gate.cpp  combo_gate.h
new_game/src/core/: fixed_math.h  fmatrix.cpp  fmatrix.h  heap.cpp  heap.h  heap_globals.cpp  macros.h  math.h  math_globals.cpp  math_globals.h  matrix.cpp  matrix.h  memory.cpp  memory.h  memory_globals.cpp  memory_globals.h  pq.h  quaternion.cpp  timer.h  timer_globals.h  types.h  vector.h
new_game/src/effects/: cloth.h  dirt.cpp  dirt.h  dirt_globals.cpp  dirt_globals.h  drip.cpp  drip.h  drip_globals.cpp  drip_globals.h  fire.cpp  fire.h  fire_globals.cpp  fire_globals.h  fog.cpp  fog.h  fog_globals.cpp  glitter.cpp  glitter.h  glitter_globals.cpp  glow.cpp  glow.h  mist.cpp  mist.h  mist_globals.cpp  pow.cpp  (+15 more)
new_game/thrust/: Always.h  Key.h  Matrix.cpp  Matrix.h  Tga.cpp  Tga.h  ab.h  cam.cpp  cam.h  d3denum.cpp  d3dframe.cpp  d3dutil.cpp  d3dutil.h  font.cpp  font.h  game.cpp  game.h  gamestate.cpp  gamestate.h  imp.cpp  imp.h  land.cpp  land.h  lmap.h  log.cpp  log.h  main.cpp  menu.h  mf.cpp  mf.h  net.cpp  net.h  orb.cpp  orb.h  os.cpp  os.h  ping.cpp  ping.h  player.cpp  player.h  (+10 more)
(+2807 files in other folders)
